Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- ZMI Export Tab for Themes tool
Bug fixes:
~~~~~~~~~~
- The "latest doc" box didn't have the title translation on.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- getLockedObjectFrom draft does not scan a complete folder (use the catalog
  instead)