@@ -11,3 +11,4 @@ New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - getLockedObjectFrom draft does not scan a complete folder (use the catalog
   instead)
+- new integration tests for collaborative editing (workspace_content_wf)
